Fix layout problems in pic browser

--- a/gvyweb.css
+++ b/gvyweb.css
@@ -90,32 +90,33 @@ body {
   }
 }
 @media(min-width: 1041px) {
-  .pic-tile-lg {
+  .pic-viewer {
     width: 1026px;
     margin-top: 15px;
     margin-left: 15px;
   }
-  .pic-tile-lg img { /*1024*/
+  .pic-viewer img { /*1024*/
     border: solid 1px gainsboro;
   }
 }
 @media(max-width: 1040px) {
-  .pic-tile-lg {
+  .pic-viewer {
     width: 100%;
     height: 100%;
+    margin: 0px;
     background-color: black;
   }
-  .pic-tile-pic {
-    width: 100%;
-    height: 100%;
-  }
+}
+.pic-viewer .pic-tile-pic {
+  width: 100%;
+  height: 100%;
 }
 .pic-tile-pic {
   position: relative;
 }
 .pic-tile-pic img {
-  min-width: 64px;
-  min-height: 64px;
+  min-width: 32px;
+  min-height: 32px;
   max-width: 100%;
   max-height: 100%;
   border-bottom: none;
